# base_qt_c_plus_plus

./: CMakeLists.txt  README.md  main.cpp  mainwindow.ui
